--- a/install
+++ b/install
@@ -1,15 +1,14 @@
 #!/usr/bin/env sh
 
-git clone https://github.com/gmarik/vundle.git .dots/vim/bundle/vundle &
-
 for file in zshrc vim vimrc gitconfig hgconfig
 do
     echo $file
     mv -f ".${file}" ".${file}.backup"
-    ln -s ".dots/${file}" ".${file}"
+    ln -vs ".dots/${file}" ".${file}"
 
     [ "$1" = "mz" ] && \
         sed -i 's/alvelcom@gmail.com/pkhusainov@machinezone.com/' ".$file"
 done
 
+git clone https://github.com/gmarik/vundle.git .dots/vim/bundle/vundle
 
