--- a/install
+++ b/install
@@ -1,6 +1,6 @@
 #!/usr/bin/env sh
 
-for file in zshrc vim vimrc gitconfig hgconfig
+for file in zshrc vim vimrc gitconfig hgrc
 do
     echo $file
     mv -f ".${file}" ".${file}.backup"
@@ -11,4 +11,5 @@ do
 done
 
 git clone https://github.com/gmarik/vundle.git .dots/vim/bundle/vundle
+vim +PluginInstall +qall > /dev/null &
 
